src/assets/scss/style.scss
@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans');
// Bootstrap
$brand_primary: #007DC3;
$gray-lightest: #f5f5f8;
$font-family-sans-serif: 'Lato', sans-serif;
$title-font: 'Open Sans', sans-serif;
@import '../../../node_modules/bootstrap/scss/bootstrap.scss';
@import '~animate.css';

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    margin: 0;
}

body {
  min-height: 100vh;
  background-color: $gray-lightest;
}

.required:after {
  content: '*';
  color: $red;
}

#app .d-flex {
  flex-direction: column;
  align-items: center;
}

.has-success .form-control-label,
.has-danger .form-control-label {
  color: $gray-dark;
}

.card {
  margin-bottom: 20px;
}

.card-header {
  padding: 0.9rem 1.25rem;
  border-bottom: none;
  background-color: #f7f7f9;

  .card-title {
    margin-bottom: 0;
    font-family: $title-font;
  }
}

.removable-header:hover {
  cursor: pointer;
}

.no-danger-show {
  color: $gray-dark;
}


/*---------------------*\
  #MODAL
\*---------------------*/

.modal {
  background: rgba(0, 0, 0, 0.4);
  display: flex;
  justify-content: center;
  align-items: center;

  .btn {
    cursor: pointer;
  }
}


/*---------------------*\
  #STEPS
\*---------------------*/

.steps {
  margin-top: 40px;
}


.step-tabs {
  list-style: none;
  margin: 0 0 20px 0;;
  padding: 0;
  display: table;
  table-layout: fixed;
  width: 100%;
  color: darken($gray-lightest, 40%);

  > li {
    position: relative;
    display: table-cell;
    text-align: center;
    font-size: 0.8em;
    cursor: pointer;

    &:hover {
      color: darken($gray-lightest, 50%);

      &:before {
        background: darken($gray-lightest, 9%);
      }
    }

    &:before {
      content: attr(data-step);
      display: block;
      margin: 0 auto;
      background: darken($gray-lightest, 7%);
      width: 3em;
      height: 3em;
      text-align: center;
      margin-bottom: 0.25em;
      line-height: 39px;
      border-radius: 100%;
      position: relative;
      z-index: 2;
      color: darken($gray-lightest, 45%);
    }

    &:after {
      content: '';
      position: absolute;
      display: block;
      background: darken($gray-lightest, 6%);
      width: 100%;
      height: 0.4em;
      top: 1.3em;
      left: 50%;
      margin-left: 1.5em;
      z-index: -1;
    }

    &:last-child:after {
      display: none;
    }

    &.is-complete {
      color: $brand-primary;

      &:hover {
        color: darken($brand-primary, 10%);

        &:before {
          background: darken($brand-primary, 5%);
        }
      }

      &:before,
      &:after {
        color: #ffffff;
        background: $brand-primary;
      }
    }

    &.is-active {
      color: $brand-primary;

      &:hover {
        color: darken($brand-primary, 10%);

        &:before {
          background: darken($brand-primary, 5%);
        }
      }

      &:before {
        color: #FFF;
        background: $brand-primary;
      }
    }


  }
}

.step {
  position: absolute;
  width: 100%;
  box-shadow: 0 3px 4px 1px rgba(0,0,0,.08), 0 7px 14px 2px rgba(50,50,93,.1);
  margin-bottom: 40px;

  &.card {
    border: none;
  }
}

.step.hidden {
  visibility: hidden;
  position: initial;
}

.addBtnContainer {
  justify-content: center;

  .btn-primary,
  .btn-success {
    color: #ffffff;
  }

  .btn {
    color: #ffffff;

    &:hover,
    &:focus {
      color: #ffffff;
    }
  }
}


.steps-buttons {
  justify-content: space-between;

  .btn-primary,
  .btn-success {
    color: #ffffff;
    margin-left: auto;

    &:hover,
    &:focus {
      color: #ffffff;
    }
  }

}


/*---------------------*\
  #PROPERTIES
\*---------------------*/

.removable-header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  .card-title {
    flex-grow: 1;
    margin-bottom: 0;
  }
}


/*---------------------*\
  #SUBMITTED_STEP
\*---------------------*/

.submitted-card-top {
  margin-top: 120px;
}

.confirm-text {
  margin-bottom: 20px;
}


/*---------------------*\
  #ANIMATIONS
\*---------------------*/

.modal,
.modal-dialog {
  animation-duration: 0.35s;
}

.step {
  animation-duration: 0.3s;
}

.steps {
  animation-duration: 0.3s;
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    transform: translate3d(40px, 0, 0);
  }

  100% {
    opacity: 1;
    transform: none;
  }
}

@keyframes fadeOutLeft {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    transform: translate3d(-40px, 0, 0);
  }
}

@keyframes fadeInDown {
  from {
    opacity: 0;
    transform: translate3d(0, -20%, 0);
  }

  to {
    opacity: 1;
    transform: none;
  }
}

@keyframes fadeOutUp {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
    transform: translate3d(0, -20%, 0);
  }
}

.tooltip {
  background: $brand-primary;
  bottom: 100%;
  color: #fff;
  display: block;
  margin-bottom: 15px;
  opacity: 0;
  padding: 20px;
  pointer-events: none;
  position: absolute;
  width: 400px;
  left: -185px;
  -webkit-transform: translateY(10px);
  -moz-transform: translateY(10px);
  transform: translateY(10px);
  -webkit-transition: all .25s ease-out;
  -moz-transition: all .25s ease-out;
  transition: all .25s ease-out;
  -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
  -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);

  &:before {
    bottom: -20px;
    content: " ";
    display: block;
    height: 20px;
    left: 0;
    position: absolute;
    width: 100%;
  }

  &:after {
    border-left: solid transparent 10px;
    border-right: solid transparent 10px;
    border-top: solid $brand-primary 10px;
    bottom: -10px;
    content: " ";
    height: 0;
    left: 50%;
    margin-left: -13px;
    position: absolute;
    width: 0;
  }

}

#app .options-div {
  flex-direction: row;
}

.wrapper {
  margin-left: -10px;
  position: relative;
}

.wrapper:hover .tooltip {
  opacity: 1;
  pointer-events: auto;
  -webkit-transform: translateY(0px);
  -moz-transform: translateY(0px);
  transform: translateY(0px);
}

/*----------------------*\
  #RESPONSIVENESS
\*----------------------*/

@media (max-width: 768px) {

  .step.card {
    position: initial;
  }

  .steps {
    padding: 0;
  }

  .step-tabs {
    margin-bottom: -15px;

    > li {

      &:hover {
        color: #f7f7f9;
      }

      &.is-active,
      &.is-complete {
        color: #f7f7f9;
        
        &:hover {
          color: #f7f7f9;
        }
      }
    }
  }

  .step-btn {
    color: #f7f7f9;
  }

  .steps-buttons {
    flex-direction: column;
    align-items: stretch;

    .btn-success,
    .btn-primary {
      color: #FFFFFF;
      margin-top: 10px;
      margin-left: 0;
      order: 1;

      &:hover,
      &:focus {
        color: #FFFFFF;
      }
    }

    .btn-secondary {
      order: 2;
      margin-top: 10px;
    }
  }

  .card-header {
    padding: 0.5rem 1rem;

    .card-title {
      margin-bottom: 0;
    }

    .close {
      padding: 8px;
    }
  }

  .list-group-item .card-block {
    padding: 0;
  }

  .wrapper {
    display: none;
  }

  #app .options-div {
    flex-direction: column;
  }
}

